========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


2019-12-25

 - Applied patch from Daniele Nicolodi
   (https://bitbucket.org/blais/beancount/pull-requests/139/parser-work-around-python38-bug-causing-a)
   to work around typing constraints around signed size types introduced in
   Python 3.8. See also https://bugs.python.org/issue38913.

 - Fixed bug with running python3 as a subprocess during testing. Fixes an error
   that occurs with the tutorial file generation.


2019-11-29

 - Added 'encoding' option to CSV importer. Amex encodes as 'latin1', not
   'utf-8' and this turned out to be necessary.


2019-11-10

 - Added an option to upload-to-sheets script to apply a minimum to the number
   of rows resized to. The problem was I had another sheet longer than the
   auto-updated data sheet, and when new rows were being inserted, rows in the
   referencing sheet were being incremented automatically to refer to the now
   displaced previous rows in the updated data sheet (even if they used to refer
   to rows after the last row in the data sheet). Avoid resizing in the number
   of rows up or down sheet should avoid most of these problems (except when at
   the boundary, but then the minimum number of rows could just be increased).
   This is quick fix that should work in the medium term.

2019-10-20

 - More changes to unittest while porting to Bazel build (for C++ support).


2019-10-11

 - Added __main__ block to all tests because ongoing port to Bazel build
   requires it.


2019-10-10

 - Moved test data for b.utils.file_type for Bazel support. It otherwise assumes
   file_type.py is a package.


2019-08-21

 - Fixed bug in split_expenses plugin.


2019-06-01

  - Upgraded Bison to 3.4 (built from source). Silenced warnings.


2019-05-01

 - Fixed #389: Patch for b.p.forecast improvements.

 - Added rolled back change to default value of flag used when using the 'txn'