@@ -4,6 +4,12 @@
 Note: This file contains a list changes in the 'default' branch.
 
 
+2019-12-29
+
+ - Added a CSV field for a unique reference number. If present, this is set as a
+   link on the transaction.
+
+
 2019-12-25
 
  - Applied patch from Daniele Nicolodi
